# Pillow

./: .appveyor.yml  .clang-format  .codecov.yml  .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .landscape.yaml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  Add  CHANGES.SIMD.rst  CHANGES.rst  CONTRIBUTING.md  CONTRIBUTORS.rst  DEPENDENCIES_LICENSE  IMG_3616.HEIC  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  PIL.txt  PKG-INFO  Pipfile  PyPI.rst  README.md  README.rst  README.txt  RELEASING.md  _imaging.c  _imagingcms.c  _imagingft.c  _imagingmath.c  _imagingmorph.c  (+40 more)
.ci/: after_success.sh  benchmark.sh  build.sh  build_cygwin.sh  install.sh  requirements-cibw.txt  requirements-mypy.txt  requirements-sbom.txt  test.cmd  test.sh
.github/: CONTRIBUTING.md  FUNDING.yml  INCIDENT_RESPONSE.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  Sponsor FUNDING.yml  codecov-upstream.yml  compare-dist-sizes.py  copilot-instructions.md  dependencies.json  embed-sbom.py  generate-sbom.py  mergify.yml  release-drafter.yml  renovate.json  zizmor.yml
.travis/: after_success.sh  build.sh  install.sh  script.sh  test.sh
Demos/: README.md
Docs/: HISTORY.txt  INSTALL.txt  index.html  pythondoc-PIL.BufrStubImagePlugin.html  pythondoc-PIL.CurImagePlugin.html  pythondoc-PIL.DcxImagePlugin.html  pythondoc-PIL.EpsImagePlugin.html  pythondoc-PIL.FitsStubImagePlugin.html  pythondoc-PIL.FliImagePlugin.html  pythondoc-PIL.FontFile.html  pythondoc-PIL.GbrImagePlugin.html  pythondoc-PIL.GdImageFile.html  pythondoc-PIL.GimpGradientFile.html  pythondoc-PIL.Hdf5StubImagePlugin.html  pythondoc-PIL.IcoImagePlugin.html  pythondoc-PIL.Image.html  pythondoc-PIL.ImageChops.html  pythondoc-PIL.ImageColor.html  pythondoc-PIL.ImageDraw.html  pythondoc-PIL.ImageFileIO.html  pythondoc-PIL.ImageFilter.html  pythondoc-PIL.ImageGrab.html  pythondoc-PIL.ImagePalette.html  pythondoc-PIL.ImageTransform.html  pythondoc-PIL.ImageWin.html  pythondoc-PIL.ImtImagePlugin.html  pythondoc-PIL.McIdasImagePlugin.html  pythondoc-PIL.MicImagePlugin.html  pythondoc-PIL.MpegImagePlugin.html  pythondoc-PIL.MspImagePlugin.html  pythondoc-PIL.OleFileIO.html  pythondoc-PIL.PalmImagePlugin.html  pythondoc-PIL.PcdImagePlugin.html  pythondoc-PIL.PdfImagePlugin.html  pythondoc-PIL.SgiImagePlugin.html  pythondoc-PIL.TgaImagePlugin.html  pythondoc-PIL.TiffImagePlugin.html  pythondoc-PIL.XpmImagePlugin.html
Images/: courB08.bdf  courB08.pil  lena.fli  lena.ppm  lena.xpm  pillow.icns
PIL/: ArgImagePlugin.py  BdfFontFile.py  BmpImagePlugin.py  BufrStubImagePlugin.py  ContainerIO.py  CurImagePlugin.py  DcxImagePlugin.py  DdsImagePlugin.py  EpsImagePlugin.py  ExifTags.py  FitsStubImagePlugin.py  FliImagePlugin.py  FontFile.py  FpxImagePlugin.py  FtexImagePlugin.py  GbrImagePlugin.py  GdImageFile.py  GifImagePlugin.py  GimpGradientFile.py  GimpPaletteFile.py  GribStubImagePlugin.py  Hdf5StubImagePlugin.py  IcnsImagePlugin.py  IcoImagePlugin.py  ImImagePlugin.py  Image.py  ImageChops.py  ImageCms.py  ImageColor.py  ImageDraw.py  ImageDraw2.py  ImageEnhance.py  ImageFile.py  ImageFileIO.py  ImageFilter.py  ImageFont.py  ImageGL.py  ImageGrab.py  ImageMath.py  ImageMode.py  (+60 more)
PIL.egg-info/: SOURCES.txt  top_level.txt
Sane/: CHANGES  README  README.rst  _sane.c  demo_numarray.py  demo_pil.py  sane.py  sanedoc.txt  setup.py
Scripts/: README  README.rst  createfontdatachunk.py  diffcover-install.sh  diffcover-report.sh  diffcover-run.sh  diffcover.sh  enhancer.py  explode.py  gifmaker.py  painter.py  pilconvert.py  pildriver.py  pilfile.py  pilfont.py  pilpainter.py  pilprint.py  player.py  thresholder.py  viewer.py
Tests/: 32bit_overflow_check.py  32bit_segfault_check.py  32bit_segfault_test.py  README.rst  README.txt  bench_cffi_access.py  bench_get.py  benchmarks.py  bmpsuite.py  check_avif_leaks.py  check_fli_oob.py  check_fli_overflow.py  check_icns_dos.py  check_imaging_leaks.py  check_j2k_dos.py  check_j2k_leaks.py  check_j2k_overflow.py  check_jp2_overflow.py  check_jpeg_leaks.py  check_large_memory.py  check_large_memory_numpy.py  check_libtiff_segfault.py  check_png_dos.py  check_release_notes.py  check_tiff_crashes.py  check_webp_leaks.py  check_wheel.py  cms_test.py  conftest.py  crash_ttf_memory_error.py  createfontdatachunk.py  helper.py  import_all.py  large_memory_numpy_test.py  large_memory_test.py  make_hash.py  mpbench.py  run.py  show_icc.py  show_mcidas.py  (+231 more)
Tk/: README.rst  _tkmini.h  booster.txt  install.txt  pilbitmap.txt  tkImaging.c
_custom_build/: backend.py  pillow_ext.py
archives/: README.rst  zlib-1.2.10.tar.xz  zlib-1.2.8.tar.xz
checks/: 32bit_segfault_check.py  check_fli_oob.py  check_fli_overflow.py  check_icns_dos.py  check_imaging_leaks.py  check_j2k_dos.py  check_j2k_leaks.py  check_j2k_overflow.py  check_jp2_overflow.py  check_jpeg_leaks.py  check_large_memory.py  check_large_memory_numpy.py  check_libtiff_segfault.py  check_png_dos.py  check_release_notes.py  check_wheel.py
dependency_licenses/: BZIP2.txt  FREETYPE2.txt  LCMS2.txt  LIBJPEG.txt  LIBLZMA.txt  LIBTIFF.txt  LIBWEBP.txt  OPENJPEG.txt  XAU.txt  XCB.txt  XDMCP.txt  ZLIB.txt
depends/: README.md  README.rst  alpine_Dockerfile  aws_ubuntu_14.04.sh  debian_8.2.sh  diffcover-install.sh  diffcover-run.sh  docker-test-valgrind-memory.sh  download-and-extract.sh  fedora_23.sh  freebsd_10.sh  install_extra_test_images.sh  install_imagequant.sh  install_libavif.sh  install_libjxl.sh  install_openjpeg.sh  install_raqm.sh  install_raqm_cmake.sh  install_webp.sh  libavif-svt4.patch  termux.sh  ubuntu_12.04.sh  ubuntu_14.04.sh
doc/: pythondoc-PIL.ArgImagePlugin.html  pythondoc-PIL.ContainerIO.html  pythondoc-PIL.ExifTags.html  pythondoc-PIL.IcnsImagePlugin.html  pythondoc-PIL.ImageEnhance.html  pythondoc-PIL.ImageFile.html  pythondoc-PIL.ImageGL.html  pythondoc-PIL.ImageStat.html  pythondoc-PIL.ImageTk.html  pythondoc-PIL.JpegImagePlugin.html  pythondoc-PIL.PSDraw.html  pythondoc-PIL.PaletteFile.html  pythondoc-PIL.PcfFontFile.html  pythondoc-PIL.TiffTags.html  (+7 more)
(+1380 files in other folders)
