[metadata]
name = Pillow
description = Python Imaging Library (Fork)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://python-pillow.org
author = Jeffrey A. Clark (Alex)
author_email = aclark@aclark.net
license = HPND
classifiers =
    Development Status :: 6 - Mature
    License :: OSI Approved :: Historical Permission Notice and Disclaimer (HPND)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Capture :: Digital Camera
    Topic :: Multimedia :: Graphics :: Capture :: Screen Capture
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Graphics :: Viewers
keywords = Imaging
project_urls =
    Documentation=https://pillow.readthedocs.io
    Source=https://github.com/python-pillow/Pillow
    Funding=https://tidelift.com/subscription/pkg/pypi-pillow?utm_source=pypi-pillow&utm_medium=pypi
    Release notes=https://pillow.readthedocs.io/en/stable/releasenotes/index.html
    Changelog=https://github.com/python-pillow/Pillow/blob/main/CHANGES.rst
    Twitter=https://twitter.com/PythonPillow
    Mastodon=https://fosstodon.org/@pillow

[options]
packages = PIL
python_requires = >=3.8
include_package_data = True
package_dir =
    = src

[options.extras_require]
docs =
    furo
    olefile
    sphinx>=2.4
    sphinx-copybutton
    sphinx-inline-tabs
    sphinx-removed-in
    sphinxext-opengraph
tests =
    check-manifest
    coverage
    defusedxml
    markdown2
    olefile
    packaging
    pyroma
    pytest
    pytest-cov
    pytest-timeout

[flake8]
extend-ignore = E203
max-line-length = 88

[isort]
profile = black

[tool:pytest]
addopts = -ra --color=yes
testpaths = Tests
